--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -15,18 +15,43 @@ h6 {
 }
 
 .box-element {
-    box-shadow: hsl(0, 0%, 80%) 0 0 16px;
+    box-shadow: hsl(0, 0%, 80%) 0 0 5px;
     background-color: #fff;
     border-radius: 4px;
     padding: 10px;
+    width: 240px;
+    height: 330px;
+    margin-bottom: 20px;
+    position: relative; 
+}
+
+.price {
+    position: absolute; 
+    bottom: 10px; 
+    left: 10px; 
+}
+
+.heading {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.starting-from {
+        text-transform: uppercase;
+        font-size: 0.6em;
+        font-weight: 600;
+        color: rgb(164, 164, 164);
+
 }
 
 .thumbnail {
     width: 100%;
     height: 200px;
-    -webkit-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
-    -moz-box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
-    box-shadow: -1px -3px 5px -2px rgba(214, 214, 214, 1);
+    margin-bottom: 10px;
+    object-fit: cover;
 }
 
 .product {
