--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -32,7 +32,7 @@
     </div>
 </div>  
     <div class="leaderboard-banner">
-        <img src="{% static 'images/Leaderboard.png' %}" alt="Descrição do banner">
+        <img src="{% static 'images/new_leaderboard.png' %}" alt="Descrição do banner">
     </div>
 
 {% endblock content %}
