--- a/ecommerce/store/templates/store/favoritos.html
+++ b/ecommerce/store/templates/store/favoritos.html
@@ -4,15 +4,22 @@
     <h2>Produtos Favoritos</h2>
     <div class="row">
         {% for favorito in favoritos %}
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{{favorito.product.imageURL}}" alt="">
-            <div class="box-element product">
-                <h6><strong>{{favorito.product.name}}</strong></h6>
-                <hr>
-                <a class="btn btn-outline-success" href="{% url 'product_detail' favorito.product.id %}">Ver</a>
-                <h4 style="display: inline-block; float: right ;"><strong>R${{favorito.product.price|floatformat:2}}</strong></h4>
-            </div>
+        <div class="col-lg-3">
+            <a href="{% url 'product_detail' favorito.product.id %}" style="text-decoration: none; color: inherit;">
+                <div class="box-element product">
+                    <img class="thumbnail" src="{{favorito.product.imageURL}}" alt="">
+                    <h6><strong>{{favorito.product.name}}</strong></h6>
+                    {% if favorito.product.valor_original %}
+                    <p class="starting-from" style="text-decoration: line-through;">R${{favorito.product.valor_original|floatformat:2}}</p>
+                    {% else %}
+                    <p class="starting-from">A partir de:</p>
+                    {% endif %}
+                    <h4 class="price" style="display: inline-block; float: right ;"><strong>R${{favorito.product.price|floatformat:2}}</strong></h4>
+                </div>                
+            </a>
         </div>
+        {% empty %}
+        <p>Nenhum produto favorito encontrado.</p>
         {% endfor %}
     </div>
 {% endblock content %}
