--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -4,7 +4,6 @@
 <style>
     .container{
         margin-left: 5%;  
-        margin-right: 5%;
     }
 </style>
 <div class="container-fluid mx-0">
@@ -34,5 +33,23 @@
     <div class="leaderboard-banner">
         <img src="{% static 'images/new_leaderboard.png' %}" alt="Descrição do banner">
     </div>
-
+    <div style="margin-left: 12%; margin-top 2%" class="row">
+    {% for product in random_products %}
+        <div class="col-lg-3">
+            <a href="{% url 'product_detail' product.id %}" style="text-decoration: none; color: inherit;">
+                <div class="box-element product">
+                    <img class="thumbnail" src="{{product.imageURL}}" alt="">
+                    <h6><strong>{{product.name}}</strong></h6>
+                    {% if product.valor_original %}
+                    <p class="starting-from" style="text-decoration: line-through;">R${{product.valor_original|floatformat:2}}</p>
+                    {% else %}
+                    <p class="starting-from">A partir de:</p>
+                    {% endif %}
+                    <h4 class="price" style="display: inline-block; float: right ;"><strong>R${{product.price|floatformat:2}}</strong></h4>
+                </div>                
+            </a>
+        </div>
+    {% endfor %}
+    </div>
 {% endblock content %}
+
