--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -20,6 +20,11 @@
     <div class="leaderboard-banner">
         <img src="{% static 'images/new_leaderboard.png' %}" alt="Descrição do banner">
     </div>
+
+    <div class="purple-line">
+        <h5>EM PROMOÇÃO:</h5>
+    </div>       
+
     <div class="row">
     {% for product in random_products %}
         <div class="col-lg-3">
