--- a/ecommerce/store/templates/store/search_results.html
+++ b/ecommerce/store/templates/store/search_results.html
@@ -3,17 +3,22 @@
     <h2 style="margin-top:5%">Resultados da pesquisa</h2>
     <div class="row">
         {% for product in products %}
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{{product.imageURL}}" alt="">
-            <div class="box-element product">
-                <h6><strong>{{product.name}}</strong></h6>
-                <hr>
-                <a class="btn btn-outline-success" href="{% url 'product_detail' product.id %}">Ver</a>
-                <h4 style="display: inline-block; float: right ;"><strong>R${{product.price|floatformat:2}}</strong></h4>
-            </div>
+        <div class="col-lg-3">
+            <a href="{% url 'product_detail' product.id %}" style="text-decoration: none; color: inherit;">
+                <div class="box-element product">
+                    <img class="thumbnail" src="{{product.imageURL}}" alt="">
+                    <h6><strong>{{product.name}}</strong></h6>
+                    {% if product.valor_original %}
+                    <p class="starting-from" style="text-decoration: line-through;">R${{product.valor_original|floatformat:2}}</p>
+                    {% else %}
+                    <p class="starting-from">A partir de:</p>
+                    {% endif %}
+                    <h4 class="price" style="display: inline-block; float: right ;"><strong>R${{product.price|floatformat:2}}</strong></h4>
+                </div>                
+            </a>
         </div>
         {% empty %}
-        <h3>Nenhum produto encontrado.</h3>
+        <p>Nenhum produto encontrado.</p>
         {% endfor %}
     </div>
 {% endblock content %}
