--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row" >
         <div class="col-lg-12">
-            <div class="box-element" >
+            <div class="box-elemento" >
                 <a class="btn btn-outline-dark" href="{% url "store" %}">&#x2190; Continue shopping</a>
                 <br>
                 <br>
@@ -18,7 +18,7 @@
                 </table>
             </div>
             <br>
-            <div class="box-element" >
+            <div class="box-elemento" >
                 <div class="cart-row" >
                     <div style="flex:2"></div>
                     <div style="flex:2"><strong>Item</strong></div>
