implementando que abas do header mostre os produtos das categorias

--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -118,9 +118,9 @@
 			<a href="{% url 'products' 'colecao' %}" class="link">COLEÇÃO</a>
 			<a href="{% url 'products' 'corrida' %}" class="link">CORRIDA</a>
 			<a href="{% url 'products' 'esportes' %}" class="link">ESPORTIVOS</a>
-			<a href="#" class="link">FUTEBOL</a>
-			<a href="#" class="link">PROMOÇÕES</a>
-			<a href="#" class="link">LANÇAMENTOS</a>
+			<a href="{% url 'products' 'futebol' %}" class="link">FUTEBOL</a>
+			<a href="{% url 'products' 'promocoes' %}" class="link">PROMOÇÕES</a>
+			<a href="{% url 'products' 'lancamentos' %}" class="link">LANÇAMENTOS</a>
 		</div>
 	</header>
     
