--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -310,7 +310,7 @@ h6 {
     height: 100%;
     border: 2px solid #9283F1;
     border-radius: 5px;
-    padding: 1rem;
+    padding: 0.8rem;
     transition: transform 300ms ease;
 }
 
@@ -519,4 +519,35 @@ header {
     color: white;
     margin-left: 1%;
     font-weight: revert;
+}
+
+.cssbuttons-io {
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 18px;
+    letter-spacing: 0.05em;
+    border-radius: 0.8em;
+    cursor: pointer;
+    border: none;
+    background: linear-gradient(to right, #acacac, #919191);
+    color: ghostwhite;
+    padding: 0.8em 1.2em;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+.cssbuttons-io.disabled {
+    background: linear-gradient(to right, #acacac, #919191);
+}
+
+.cssbuttons-io.enabled {
+    background: linear-gradient(to right, #8e2de2, #4a00e0);
+}
+
+.cssbuttons-io.enabled:hover {
+    background-color: #4a00e0;
+}
+
+.cssbuttons-io.enabled:active {
+    background: linear-gradient(to right, #8e2de2, #4a00e0);
+    transform: scale(0.95);
 }
