--- a/ecommerce/store/templates/store/product_detail.html
+++ b/ecommerce/store/templates/store/product_detail.html
@@ -60,7 +60,14 @@
         font-size: 16px;
     }
 
-    
+    .row {
+        margin-left: auto;
+        margin-right:auto;
+        margin-top: 2%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
     
 </style>
 <div class="product-detail-container">
